auth/manifests/oidc-authservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  labels:
%{ for key,value in labels ~}
    ${key}: ${value}
%{ endfor ~}
  name: authn-filter
  namespace: ${istio_namespace}
spec:
  filters:
  - filterConfig:
      httpService:
        authorizationRequest:
          allowedHeaders:
            patterns:
            - exact: cookie
            - exact: X-Auth-Token
        authorizationResponse:
          allowedUpstreamHeaders:
            patterns:
            - exact: kubeflow-userid
        serverUri:
          cluster: outbound|8080||authservice.${istio_namespace}.svc.cluster.local
          failureModeAllow: false
          timeout: 10s
          uri: http://authservice.${istio_namespace}.svc.cluster.local
      statusOnError:
        code: GatewayTimeout
    filterName: envoy.ext_authz
    filterType: HTTP
    insertPosition:
      index: FIRST
    listenerMatch:
      listenerType: GATEWAY
  workloadLabels:
    istio: ingressgateway
